--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/rajeev.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <title>Rajeev's Portfolio</title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Rajeev Gupta&#39;s Portfolio | Rajeev Gupta Portfolio"
     />
+    <meta
+      property="og:description"
+      content="Rajeev Gupta&#39;s Portfolio | Rajeev Gupta Portfolio"
+    />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Rajeev Gupta's Portfolio" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
